--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
     </tbody>
   </table>
   <a href="hobbies.html">My Hobbies</a>
-  <a href="ContactMe.html">Contact Me</a>
+  <a href="contactme.html">Contact Me</a>
 </body>
 </html>
